--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ email: eugeniofr11@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
-  #email: /contact/
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/eugeniofr
+  linkedin-square: https://www.linkedin.com/in/eugenio-felix-bb7829bb
+  #facebook-official: https://facebook.com/<username>
+  #google-plus-square: https://plus.google.com/u/0/+<username>
+  email: eugeniofr11@gmail.com
   #flickr:
   #instagram:
   #youtube-square:
