--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,16 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
   #twitter: https://twitter.com/<username>
+  email: eugeniofr11@gmail.com
+  behance: http://www.behance.net/eugeniofr
+  linkedin-square: https://www.linkedin.com/in/eugenio-felix-bb7829bb
+  angellist: https://angel.co/eugenio-felix
+  flickr: https://www.flickr.com/photos/130838846@N03/
+  deviantart: http://eugenio1.deviantart.com/
   github: https://github.com/eugeniofr
   linkedin-square: https://www.linkedin.com/in/eugenio-felix-bb7829bb
   #facebook-official: https://facebook.com/<username>
   #google-plus-square: https://plus.google.com/u/0/+<username>
-  email: eugeniofr11@gmail.com
-  #flickr:
   #instagram:
   #youtube-square:
   #spotify:
@@ -29,8 +33,6 @@ social:
   #pied-piper:
   #digg:
   #soundcloud:
-  #deviantart:
-  #angellist:
   #tumblr-square:
   #stackexchange:
   #weibo:
