--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
   #twitter: https://twitter.com/<username>
-  email: eugeniofr11@gmail.com
+  #email: mailto:eugeniofr11@gmail.com
   behance: http://www.behance.net/eugeniofr
   linkedin-square: https://www.linkedin.com/in/eugenio-felix-bb7829bb
   angellist: https://angel.co/eugenio-felix
